# platform

./: CMakeLists.txt
include/platform/: cb_arena_malloc.h  cb_arena_malloc_client.h  cb_malloc.h  je_arena_corelocal_tracker.h  je_arena_malloc.h  je_arena_threadlocal_tracker.h  non_negative_counter.h  platform.h  system_arena_malloc.h
src/: byteorder.c  cb_arena_malloc.cc  cb_malloc.cc  cb_pthreads.c  cb_win32.c  config.cmake.h  je_arena_corelocal_tracker.cc  je_arena_malloc.cc  je_arena_threadlocal_tracker.cc  system_arena_malloc.cc  weak_cb_malloc.cc
tests/: CMakeLists.txt  crc32c_bench.cc
tests/arena_malloc/: CMakeLists.txt  arena_malloc_test.cc  arena_malloc_tracker_test.cc  memory_tracking_plugin.cc
tests/atomic/: non_negative_counter_test.cc
